--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   padding-left: 100px;
   padding-right: 100px;
-  margin-top: 18%;
+  margin-top: 10%;
   text-align: center;
 }
 
@@ -52,9 +52,16 @@ body{
   margin-bottom: 20px;
   font-size: 2em;
   background-color: red;
+  /* background-image: url('flag.jpg'); */
+  background-size: 400px 200px;
+  background-position: -10px 20px center;
 }
 
 .state{
+  /* background-color: lightgrey; */
+  /* background-image: url('flag.jpg'); */
+  /* -webkit-background-clip: text; */
+  /* -webkit-text-fill-color: grey; */
   font-family: Helvetica;
   text-shadow:   1px 0px #000000, 0px 1px #000000,
   2px 1px #171717, 1px 2px #171717,
